--- a/CursoHtmlCssJQuery/DinamicoJQuery.html
+++ b/CursoHtmlCssJQuery/DinamicoJQuery.html
@@ -5,7 +5,7 @@
 		<title>Dinamico</title>
 	</head>
 	<body>
-		<h1>Treinmentos</h1>
+		<h1>Treinamentos</h1>
 			<input type="button" id="botao-atualiza" value="Atualiza Lista " />
 			<ul id="lista">
 				<li>Logica</li>
