--- a/jquery-parte2-manipulacao-de-conteudo-dinamico-master/jquery/index.html
+++ b/jquery-parte2-manipulacao-de-conteudo-dinamico-master/jquery/index.html
@@ -6,6 +6,11 @@
 
 </head>
 <body>
+
+	<h2>Geral</h2>
+	<a class="alterna-propaganda" href="">Esconder Propaganda</a>	
+	<a id="mostra-propaganda" class="alterna-propaganda" href="">Mostra Propaganda</a>
+
 	<div class="carrinho">
 		<h2>Carrinho entrega em Sao Paulo</h2>
 		<table>
@@ -70,7 +75,7 @@
 
 		</div>
 
-		<div>
+		<div class="resumo">
 			O valor total :<span class="valor-total"> </span>
 			Qtd Itens :<span class="total-itens"> </span>
 		</div>
@@ -107,7 +112,7 @@
 
 		</div>
 
-		<div>
+		<div class="resumo">
 			O valor total :<span class="valor-total"> </span>
 			Qtd Itens :<span class="total-itens"> </span>
 		</div>
@@ -145,7 +150,7 @@
 
 		</div>
 
-		<div>
+		<div class="resumo">
 			O valor total :<span class="valor-total"> </span>
 			Qtd Itens :<span class="total-itens"> </span>
 		</div>
